--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,28 @@
   <groupId>com.gavagai</groupId>
   <artifactId>jussisandbox</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  	<dependencies>
+  
+		<dependency>
+			<groupId>com.gavagai.rabbit</groupId>
+			<artifactId>monitoring-rmi-dto</artifactId>
+			<type>jar</type>
+			<version>1.3-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.gavagai.rabbit</groupId>
+			<artifactId>monitoring-rmi-api</artifactId>
+			<type>jar</type>
+			<version>1.3-SNAPSHOT</version>
+		</dependency>
+		
+				<dependency>
+			<groupId>com.gavagai.rabbit</groupId>
+			<artifactId>utils</artifactId>
+			<version>1.3-SNAPSHOT</version>
+		</dependency>
+		
+  	</dependencies>
+  
 </project>
